src/test/testData/kubernetes/KUBE001/pod-global-null.yaml.denied
apiVersion: v1
<error descr="Container runs as root or can gain root privileges.">kind: Pod</error>
metadata:
  name: static-web-all-null
  labels:
    role: myrole
spec:
  containers:
    - name: web
      image: nginx
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
      securityContext:
        runAsGroup: 1000